# VidyutDrishti

./: .gitignore  FEEDBACK_DEBUGGING_SUMMARY.md  Makefile  README.md  VidyutDrishti_Pitch.pptx  build_ppt.py  docker-compose.yml  features.md  fix_committer.py  generate_custom_doc.py  ingest_simulator_data.py  run_prototype.py  show_synthetic_data.py  test_api.py  update_slide10.py  update_slide9.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/audit/: __init__.py  logger.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/detection/: __init__.py  classifier.py  confidence.py  layer0_balance.py  layer1_zscore.py  layer2_peer.py  layer3_isoforest.py
backend/app/evaluation/: __init__.py  backtest.py  baselines.py  harness.py  leakage.py  metrics.py
backend/app/features/: __init__.py  engineer.py  models.py
backend/app/feedback/: __init__.py  processor.py
backend/app/forecast/: __init__.py  engine.py
backend/app/forecasting/: __init__.py  models.py  scheduler.py  service.py
backend/app/ingestion/: __init__.py  cli.py  imputer.py  loader.py  pipeline.py  quality.py  readers.py  schema.py
backend/app/inspection/: __init__.py  queue.py
backend/app/risk/: __init__.py  classifier.py  models.py
frontend/: README.md  index.html  package.json  vite.config.ts
infra/: .env.sample  Dockerfile.backend  Dockerfile.frontend
logs/: README.md
simulator/: README.md  __init__.py  config.yaml  dataset.py  generate.py  load_model.py  models.py  scenarios.py
(+131 files in other folders)
