[project]
name = "vidyutdrishti-backend"
version = "0.1.0"
description = "VidyutDrishti backend: ingestion, forecasting, detection, API."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary - Prototype" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "SQLAlchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "alembic>=1.13,<2",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "APScheduler>=3.10,<4",
    "prophet>=1.1.5,<2",
    "scikit-learn>=1.5,<2",
    "holidays>=0.55,<1",
    "joblib>=1.4,<2",
    "PyYAML>=6.0,<7",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.6,<1",
    "black>=24.8,<25",
    "mypy>=1.11,<2",
    "types-PyYAML",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "simulator*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
